--- a/README
+++ b/README
@@ -6,15 +6,11 @@ Build
 
 Required packages
 ```
-sudo apt-get update &&\
-sudo apt-get install -y git lzop build-essential gcc \
-    bc libncurses5-dev libc6-i386 lib32stdc++6 zlib1g:i386 p7zip-full p7zip-rar
+sudo apt-get update && sudo apt-get install -y git lzop build-essential gcc bc libncurses5-dev libc6-i386 lib32stdc++6 zlib1g:i386 p7zip-full p7zip-rar
 ```
 Toolchain 6.3.1
 ```
-sudo mkdir -p /opt/toolchains &&\
-wget https://releases.linaro.org/components/toolchain/binaries/6.3-2017.05/aarch64-linux-gnu/gcc-linaro-6.3.1-2017.05-x86_64_aarch64-linux-gnu.tar.xz &&\
-sudo tar Jxvf gcc-linaro-6.3.1-2017.05-x86_64_aarch64-linux-gnu.tar.xz -C /opt/toolchains/
+sudo mkdir -p /opt/toolchains && wget https://releases.linaro.org/components/toolchain/binaries/6.3-2017.05/aarch64-linux-gnu/gcc-linaro-6.3.1-2017.05-x86_64_aarch64-linux-gnu.tar.xz && sudo tar Jxvf gcc-linaro-6.3.1-2017.05-x86_64_aarch64-linux-gnu.tar.xz -C /opt/toolchains/
 ```
 Add lines below to ~/.bashrc
 ```
